@@ -100,6 +100,9 @@ Version CVS HEAD (?)
   * Dimension Region Editor: Show coarse sample format info (audio channels,
     bit depth, sample rate) and unique sample ID (since the gig format allows
     different samples to have the same name).
+  * Dimension Region Editor: Added button "Select Sample" on the sample tab,
+    which allows to conveniently select the dimension region's sample on the
+    left hand side's samples tree view.
 
 Version 0.2.0 (2009-07-31)
 
